--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,10 @@
 {
 	"extends": [
-		"stylelint-config-standard-scss"
+		"stylelint-config-standard-scss",
+		"stylelint-config-rational-order"
+	],
+	"plugins": [
+		"stylelint-order",
+		"stylelint-scss"
 	]
 }
